# my-agent

./: .gitignore  LICENSE  PROGRESS.md  README.md
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  connection_manager.py  handlers.py  models.py  router.py  state.py
apps/api/app/llm/: ollama_provider.py  provider.py
apps/api/app/routes/: health.py  ws.py
apps/api/tests/: test_handlers.py  test_health.py  test_llm_provider.py  test_router.py  test_state.py  test_ws.py  test_ws_llm.py
apps/desktop/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ActivityPanel.tsx  CommandBar.tsx  ModeDock.tsx  Orb.tsx  PermissionModal.tsx  StatusBar.tsx  ToastStack.tsx  activity-panel.css  command-bar.css  dev-state-simulator.css  mode-dock.css  orb.css  permission-modal.css  status-bar.css  toast-stack.css
apps/desktop/src/debug/: DevStateSimulator.tsx
apps/desktop/src/lib/: useBackendConnection.ts
apps/desktop/src/state/: orbState.ts  types.ts
apps/desktop/src/styles/: tokens.css
docs/: ARCHITECTURE.md  DECISIONS.md  DEVELOPMENT_PHASES.md  ENGINEERING_RULES.md  EVENT_PROTOCOL.md  MASTER_BLUEPRINT.md  REPOSITORY_STRUCTURE.md  UI_SPEC.md
scripts/: README.md  dev-backend.ps1  dev-backend.sh  dev-desktop.ps1  dev-desktop.sh  setup-backend.ps1  setup-backend.sh
tests/: README.md  test_integration_smoke.py
